# configsync-cli

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml
devsync/: __init__.py  ai_sync.py  claude_sync.py  cli.py  core.py  crypto.py  env_manager.py  manifest.yaml  package_manager.py  plugin_system.py  provisioner.py
devsync/backends/: cloud.py
devsync/plugins/: __init__.py  claude.py  cursor.yaml
devsync/providers/: __init__.py  base.py  builtin.py  keyring_provider.py  onepassword.py
src/: index.ts
src/commands/: add.ts  completions.ts  config.ts  diff.ts  doctor.ts  env.ts  history.ts  index.ts  init.ts  list.ts  login.ts  logout.ts  machine.ts  module.ts  profile.ts  project.ts  pull.ts  push.ts  remove.ts  rollback.ts  scan.ts  secret.ts  setup.ts  status.ts  sync.ts  vars.ts  watch.ts  workspace.ts
src/lib/: backend.ts  banner.ts  bootstrap.ts  cloud-v2.test.ts  cloud-v2.ts  cloud.ts  concurrency.ts  config.ts  crypto.ts  dek-cache.ts  dependency-graph.ts  entity-blob.ts  entity-sync.ts  env-capture.ts  envelope-crypto.test.ts  envelope-crypto.ts  environment.ts  envvars.ts  filter.ts  git-info.test.ts  git-info.ts  hash-cache.ts  hooks.ts  modules.ts  package-diff.ts  package-mappings.ts  packages.ts  profiles.ts  prompt.test.ts  prompt.ts  safety.ts  session.ts  template.ts  terminal.ts
src/lib/backends/: cloud.ts  filesystem.test.ts  filesystem.ts  index.ts
